changing title size

--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
 	<div class="grid">
 	<div class="unit span-grid">
 	<div class="head">        
-		<h1 style="float:left;">jmsudar.com</h1>
+		<h2 style="float:left;">jmsudar.com</h2>
 	</div>
 	<div id="menu">
-		<p>I spend my time...</p>
+		<ul><li>I spend my time...</li></ul>
 	</div>
 	<div class="unit span-grid">
 		<p>My name is Joe. I'm a Technology Operations Analyst with The Commerce Bank of Washington. My work days include database and web development, internal and client support, and network and server administration.</p>
