--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
         <!-- Place favicon.ico in the root directory -->
-	<link type="text/css" rel="stylesheet" href="css/jquery.dropdown.css" />
-	<script type="text/javascript" src="js/jquery.dropdown.js"></script>
+	<link type="text/css" rel="stylesheet" href="css/jquery.dropdown.min.css" />
+	<script type="text/javascript" src="js/jquery.dropdown.min.js"></script>
         <style>
 		html{font:normal normal 105%/1.7 sans-serif}
 		.container{max-width:1120px;margin:0 auto;padding:0 30px;padding:0 1.5rem}
