second attempt fix location

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 		.jq-dropdown.jq-dropdown-tip {margin-top: 8px;}
 		.jq-dropdown.jq-dropdown-tip:before {position: absolute;top: -6px;left: 9px;content: "";border-left: 7px solid transparent;border-right: 7px solid transparent;border-bottom: 7px solid #ddd;display: inline-block;}
 		.jq-dropdown.jq-dropdown-tip:after {position: absolute;top: -5px;left: 10px;content: "";border-left: 6px solid transparent;border-right: 6px solid transparent;border-bottom: 6px solid white;display: inline-block;}
-		.jq-dropdown.jq-dropdown-tip.jq-dropdown-anchor-right:before {right: auto;left: 9px;}
-		.jq-dropdown.jq-dropdown-tip.jq-dropdown-anchor-right:after {right: auto;left: 10px;}
+		.jq-dropdown.jq-dropdown-tip.jq-dropdown-anchor-right:before {left: auto;right: 9px;}
+		.jq-dropdown.jq-dropdown-tip.jq-dropdown-anchor-right:after {left: auto;right: 10px;}
 		.jq-dropdown.jq-dropdown-scroll .jq-dropdown-menu,
 		.jq-dropdown.jq-dropdown-scroll .jq-dropdown-panel {max-height: 180px;overflow: auto;}
 		.jq-dropdown .jq-dropdown-menu li {list-style: none;padding: 0 0;text-indent: 0;margin: 0;line-height: 18px;}
@@ -78,7 +78,7 @@
 		<a href="#" id="mobileSize" data-jq-dropdown="#jq-dropdown-1"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABYAAAASCAYAAABfJS4tAAAAAXNSR0IArs4c6QAAAAZiS0dEAP8A/wD/oL2nkwAAAAlwSFlzAAALEwAACxMBAJqcGAAAAAd0SU1FB+ALGwQ2GLch8VIAAAArSURBVDjLY8zMzPzPQAPAxEAjMPQMZvz///9oUECCYjS5jSa30eQ2nAwGAKpcDMj32s+fAAAAAElFTkSuQmCC" alt="hamburger"></a></h2>
 	</div>
 	<div class="unit span-grid">
-	<div id="jq-dropdown-1" class="jq-dropdown jq-dropdown-tip">
+	<div id="jq-dropdown-1" class="jq-dropdown jq-dropdown-tip jq-dropdown-relative">
     		<ul class="jq-dropdown-menu">
         		<li><a href="http://jmsudar.blogspot.com/">Writing</a></li>
         		<li><a href="#">Designing</a></li>
