--- a/webpages.html
+++ b/webpages.html
@@ -79,7 +79,7 @@
     		<ul class="jq-dropdown-menu">
         		<li><a href="http://jmsudar.blogspot.com/">Writing</a></li>
         		<li><a href="webpages.html">Designing</a></li>
-        		<li><a href="#">Rowing</a></li>
+        		<!--<li><a href="#">Rowing</a></li>-->
 			<li><a href="http://jmsudar.imgur.com/">Wargaming</a></li>
 		</ul>
 	</div>
