added rowing and volunteering pages

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
         <meta name=viewport content="width=device-width, minimum-scale=1.0, maximum-scale=1.0"/>
 
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
-        <!-- Place favicon.ico in the root directory -->
-        <style>
+        <!--menus inspired by labs.abeautifulsite.net/jquery-dropdown-->
+        <!--styles inspired by https://varvy.com/pagespeed/wicked-fast.html-->
+	<style>
 		html{font:normal normal 105%/1.7 sans-serif}
 		a{color:#696969; !important}
 		.container{max-width:1120px;margin:0 auto;padding:0 30px;padding:0 1.5rem}
@@ -79,7 +80,8 @@
     		<ul class="jq-dropdown-menu">
         		<li><a href="http://jmsudar.blogspot.com/">Writing</a></li>
         		<li><a href="webpages.html">Designing</a></li>
-        		<!--<li><a href="#">Rowing</a></li>-->
+        		<li><a href="rowing.html">Rowing</a></li>
+			<li><a href="volunteering.html">Volunteering</a></li>
 			<li><a href="http://jmsudar.imgur.com/">Wargaming</a></li>
 		</ul>
 	</div>
