updating writing links

--- a/writing.html
+++ b/writing.html
@@ -76,12 +76,13 @@
 		<a href="#" id="mobileSize" data-jq-dropdown="#jq-dropdown-1"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABYAAAASCAYAAABfJS4tAAAAAXNSR0IArs4c6QAAAAZiS0dEAP8A/wD/oL2nkwAAAAlwSFlzAAALEwAACxMBAJqcGAAAAAd0SU1FB+ALGwQ2GLch8VIAAAArSURBVDjLY8zMzPzPQAPAxEAjMPQMZvz///9oUECCYjS5jSa30eQ2nAwGAKpcDMj32s+fAAAAAElFTkSuQmCC" alt="hamburger"></a></h2>
 	</div>
 	<div class="unit span-grid">
-	<div id="jq-dropdown-1" class="jq-dropdown jq-dropdown-tip jq-dropdown-anchor-right">
+	<div id="jq-dropdown-anchor-right">
 		<ul class="jq-dropdown-menu">
-			<li><a href="writing.html">Writing</a></li>
-			<li><a href="rowing.html">Rowing</a></li>
-			<li><a href="volunteering.html">Volunteering</a></li>
-			<li><a href="docs/JosephSudarResume.pdf">Resumé</a></li>
+			<li><a href="https://jmsudar.com/writing.html">Writing</a></li>
+			<li><a href="https://github.com/jmsudar">Coding</a></li>
+			<li><a href="https://jmsudar.com/rowing.html">Rowing</a></li>
+			<li><a href="https://jmsudar.com/volunteering.html">Volunteering</a></li>
+			<li><a href="https://jmsudar.com/docs/JosephSudarResume.pdf">Working</a></li>
 		</ul>
 	</div>
 		<p>Below are a couple selections of my creative writing work. To date I have been published once, in the 2011 Scribendi literary journal. If you are curious about my writing or would like to read more, please feel free to reach out at <u>jmsudar@gmail.com</u>.</p>
