update chapter headings

--- a/writing/restless.html
+++ b/writing/restless.html
@@ -87,7 +87,7 @@
 	</div>
 		<h1>Restless</h1>
 		<h3>By J.M. Sudar</h3>
-		<p style="display: flex; justify-content: center;">Prologue</p>
+		<h3 style="display: flex; justify-content: center;">Prologue</h3>
 		<p>Sid lost count of how many silent, early departures they’d made around the dozenth time.
 		Ahead of him the headlights telegraphed hours more of winding river road to endure. Next to him, Katrina stared into the darkness. Based on her expression, she was contemplating the end of civilization.<br><br>
 		Irreconcilable differences. It was Kat’s favorite buzzword, or at least her favorite description of every problem they’d had over the last year. They no longer had arguments, disagreements, or even differing opinions. They had irreconcilable differences.<br><br>
@@ -139,7 +139,7 @@
 		“Drive, drive, drive, drive, drive,” Kat muttered like a mantra.<br><br>
 		Somewhere near the junction with the main road their hands found each other and squeezed harder than Sid had throttled the steering wheel thirty minutes prior. With her free hand and full battery, Kat texted, tweeted, and generally screamed to the world what they’d seen, while narrating her messages in duplicate to Sid.<br><br>
 		He barely noticed. He wasn’t thinking about the giant, nor about the frostbitten man. Instead, he thought about the pit, the feeling of being dragged there by his wrist, and the bottomless darkness waiting to devour him. <br><br>
-		<p style="display: flex; justify-content: center;">Chapter One</p>
+		<h3 style="display: flex; justify-content: center;">Chapter One</h3>
 		<p>Heck heard the ghosts aboard the Mary Ann's Morning long before the ship’s outline materialized in the mist. <br><br>
 		“...kill you...” echoed a patch of words over the water, between chokes of anger and pain.<br><br>
 		“There,” said Captain Russ, “did you hear it? Clear as cussing.”<br><br>
@@ -249,7 +249,7 @@
 		Either way, he couldn’t stay down here. It was time. He had to make an attempt down there in the dark. He had to take whatever agency was left to him before it vanished entirely.<br><br>
 		He’d barely made it twenty steps into the tunnel before he paused at the gentle hushing sound ahead of him. Something… slithering? He barely had a moment to imagine what horrible new thing this was before a soft, orange glow lit the corner ahead of him. Any relief he felt faded the moment the circular, orange-hot metal brand poked around the corner.<br><br>
 		Sid screamed himself awake, not even realizing he’d fallen back asleep. Moments later he crashed into the ground, taking most of the blankets with him. Kat woke up exactly enough for her motor control to slam another pillow where he’d just been. <br><br></p>
-		<p style="display: flex; justify-content: center;">Chapter Two</p>
+		<h3 style="display: flex; justify-content: center;">Chapter Two</h3>
 		<p>Colloquially, Heck was a medium. In practice, he was more of a ghost psychiatrist, since he held his PhD in haunting remediation from the Riverport Academy of Post-Death Phenomena, and operated under the Academy’s civil authority. Situations like Silt Step made up the bulk of his work: investigate credible hauntings, mitigate any impact to the living, and assess how best to stem any progression to a more dangerous class of ghost if necessary.<br><br>
 		By now, ghosts were an accepted part of life, so to speak. Research in the 1970s began the trail to legitimacy with peer reviewed, longitudinal studies establishing the basics of how and why someone might come back from the dead. The idea faced scrutiny until the early 1990s, however. Reality TV in the early 2000s meanwhile nearly sent the field back to the dark ages and was why Heck bent over backwards to avoid being called a “ghost hunter.” Anyone who knew him even a little knew better then to mention Ghostbusters around him. When he was a few drinks deep, he could easily rant about its damage to the prestige of his field for hours. It extended to the point where he couldn’t watch Bill Murray in any of his other films, which was a pity, because he wished he could love Caddyshack. <br><br>
 		When the research finally outpaced the skepticism, a few nasty realities cut public interest in ghosts by half: not everyone would become a ghost, not everyone could see or interact with ghosts, and no ghosts chose how they came back or what moments of their life caused their persistence after death. Like quantum physics, boring reality killed the romance and took public interest in the crossfire, relegating ghost study to science fiction writers and the few people with the head for research.<br><br>
