updated language and formatting

--- a/writing.html
+++ b/writing.html
@@ -85,15 +85,15 @@
 			<li><a href="https://jmsudar.com/docs/JosephSudarResume.pdf">Working</a></li>
 		</ul>
 	</div>
-		<p>Below are a couple selections of my creative writing work. To date I have been published once, in the 2011 Scribendi literary journal. If you are curious about my writing or would like to read more, please feel free to reach out at <u>jmsudar@gmail.com</u>.</p>
+		<p>Making up stories is one of the earliest things I remember doing. Despite this, I didn't put together that I could put my ideas on paper until age fourteen. Since then, I've tried and mostly succeeded at writing every day. To date I have been published once, in the 2011 Scribendi literary journal. If you are curious about my writing or would like to read more, please feel free to reach out to <u>jmsudar@gmail.com</u>.</p>
 		<a href="/writing/restless.html"><h1>Restless</h1></a>
-		<p>Restless is the second novel-length piece of writing I've finished to date, and the one I feel best represents me as a writer. My hope is that Restless can one day be published. Please enjoy the content from the first 30 pages below!</p>
-		<p>Hector "Heck" Reeves is a medium. Specifically, he hunts revenants, malicious ghosts, under the authority of the Riverport Academy of Post Death Phenomena. Or he was, until the trauma of his own possession as a teenager resurfaces and threatens to end his career. When his most-promising student goes missing, he has no choice but to push past his trauma and return to work. What waits for him in the dark ruins in which she disappeared is not simply another revenant, however, but something older, more dangerous, and more cruel than his field believes possible.</p>
+		<p>Restless is the second novel-length piece of writing I've finished to date, and the one I feel best represents me as a writer. My hope is that Restless can one day be published. Please enjoy here the content from the first 30 pages!</p>
+		<p>Hector "Heck" Reeves is a medium. Specifically, he hunts revenants, malicious ghosts, under the authority of the Riverport Academy of Post Death Phenomena. Or he was, until the trauma of his own possession as a teenager resurfaced and threatened to end his career. When his most-promising student goes missing, he has no choice but to push past his trauma and return to work. What waits for him in the dark ruins in which she disappeared is not simply another revenant, however, but something older, more dangerous, and more cruel than his field believes possible.</p>
 		<a href="/writing/gorgon.html"><h1>Gorgon</h1></a>
 		<p>I submitted Gorgon to Granta in 2017. I made it to the final selection for the short list, but unfortunately did not make it over the finish line.</p>
 		<p>A Grecian businessman, made destitute by the Greek financial collapse, returns to the only asset his creditors didn't seize: a decrepit coastal property. He's dead by morning, with no sign of what killed him or how. Baffled and beset by the police, the family lawyer turns to the only helping hand offered to him: a forensic historian named Celia Gilbert.</p>
 		<a href="/writing/tami.html"><h1>Tami</h1></a>
-		<p>Tami was retitled to Sami when it was published by Scribendi as I wanted to avoid using a real name. In retrospect, I really resent the change and am happy to post the original text here. This story was inspired by my experience working at a cement formwork factory in Woodland, Washington, in 2009.</p>
+		<p>Tami was retitled to Sami when it was published by Scribendi as I wanted to avoid using a real name. In retrospect, I really resent the change and am happy to post the original text here. This story was inspired by my experience working at a cement formwork factory in Woodland, Washington, in 2010.</p>
   	</div>
 	</div>
 	</div>
