--- a/writing/gorgon.html
+++ b/writing/gorgon.html
@@ -85,8 +85,8 @@
 			<li><a href="https://jmsudar.com/docs/JosephSudarResume.pdf">Working</a></li>
 		</ul>
 	</div>
-		<h1>Gorgon</h1>
-		<h3>By Joe Sudar</h3>
+		<h1 style="display: flex; justify-content: center;">Gorgon</h1>
+		<h2 style="display: flex; justify-content: center;">By Joe Sudar</h2>
 		<p>Argus Buros had removed his sunglasses long before dusk. He put them back on when he saw Cove House.<br><br>
 		The white plaster focused the dying light like a magnifying glass. The other historic homes dotting Serifos's old coastal neighborhood were like soiled shirts in comparison to the bleached walls of his family home. If he wanted to bring radiance back to the Buros name, this was the right place to start.<br><br>
 		“Please, Argus,” groveled Nicholas Demos behind him in their native Greek. “There are other places. You don't need this.”<br><br>
@@ -126,7 +126,7 @@
 		“I had dinner at home.”<br><br>
 		“Can your wife confirm that?”<br><br>
 		“I live alone.”<br><br>
-		“Well I’m sorry to hear that.” He made notes on a pad of ruled paper. “So very sorry to hear that.”
+		“Well I’m sorry to hear that.” He made notes on a pad of ruled paper. “So very sorry to hear that.”<br><br>
 		His tone made another unpleasant twist. “I’m sorry, inspector, but do you not believe what I’m telling you?”<br><br>
 		The inspector reached inside his jacket. What police stereotype did he have now? Brass knuckles? A flask of whiskey? Instead he produced a lollipop, popping it into his mouth next to the cigarette. “I believe what you’re telling me. But I also believe what my toxicologist has to say, and they’re saying Mr. Buros’s body is showing signs that he was poisoned.”<br><br>
 		Nick hadn’t seen the body yet. Somewhere in his mind he was hoping they would find an aneurysm or heart episode, something that was more or less beyond anyone’s control. He didn’t think his own heart could handle hearing something violent about the young man he still remembered standing next to his father's hip at age six for the annual family portrait.<br><br>
@@ -218,7 +218,7 @@
 		Nick nodded. “Everyone across the world knows the legend: he took it to Polydectes, saw that he was betrayed, slew the king's court, and threw the head into the sea. It sank to the bottom and sits there to this day, turning fish into stone.”<br><br>
 		“Into coral, more accurately. The Greek people have a wonderful imagination for explaining the world around them, Nick. Storytellers across the globe owe them for that.”<br><br>
 		She found the image she needed and showed it to him. It was an image of parchment or some other primitive, aged paper. There was Greek writing on it in a dialogue Nick was unfamiliar with. And up in the corner he saw a hand drawn shield crossed by a short sword. “That's the city's emblem,” he said. “What is this?”<br><br>
-		“It's a hand-copied municipal document detailing records from the port authority in the year 1539.”
+		“It's a hand-copied municipal document detailing records from the port authority in the year 1539.”<br><br>
 		“There are no records in this city that go back so far.”<br><br>
 		Celia's old smile returned. “Not after the fire of 1701. Isn't it good luck then, that someone had the foresight to painstakingly copy every word of it and take it to an archive elsewhere, just in case something like that should happen?”<br><br>
 		“And those are your people, I suppose?”<br><br>
