--- a/writing/restless.html
+++ b/writing/restless.html
@@ -85,10 +85,10 @@
 			<li><a href="https://jmsudar.com/docs/JosephSudarResume.pdf">Working</a></li>
 		</ul>
 	</div>
-		<h1>Restless</h1>
-		<h3>By J.M. Sudar</h3>
+		<h1 style="display: flex; justify-content: center;">Restless</h1>
+		<h2 style="display: flex; justify-content: center;">By J.M. Sudar</h2>
 		<h3 style="display: flex; justify-content: center;">Prologue</h3>
-		<p>Sid lost count of how many silent, early departures they’d made around the dozenth time.
+		<p>Sid lost count of how many silent, early departures they’d made around the dozenth time.<br><br>
 		Ahead of him the headlights telegraphed hours more of winding river road to endure. Next to him, Katrina stared into the darkness. Based on her expression, she was contemplating the end of civilization.<br><br>
 		Irreconcilable differences. It was Kat’s favorite buzzword, or at least her favorite description of every problem they’d had over the last year. They no longer had arguments, disagreements, or even differing opinions. They had irreconcilable differences.<br><br>
 		“I’m sorry,” he offered, “all I said was that I didn’t like seafood.”<br><br>
