--- a/writing/tami.html
+++ b/writing/tami.html
@@ -85,8 +85,8 @@
 			<li><a href="https://jmsudar.com/docs/JosephSudarResume.pdf">Working</a></li>
 		</ul>
 	</div>
-		<h1>Tami</h1>
-		<h3>By Joe Sudar</h3>
+		<h1 style="display: flex; justify-content: center;">Tami</h1>
+		<h2 style="display: flex; justify-content: center;">By Joe Sudar</h2>
 		<p>On good days her nickname was Rosie the Riveter or Mighty Mouse. On bad days it was Cunt, Bitch, or Dick.<br><br>
 		Tami was forty years young, eighteen years a mother, twenty-five years a temporary laborer, twenty-six years an orphan, four years a wife, one year an abused wife, seventeen years divorced, and twenty-seven years an alcoholic.<br><br>
 		Her body was a tablet that kept the record of her life, with tattoos stretching from the triumph of love to the resigned determination of acceptance, all mapped out over browned skin stretched taught over lingering maternity weight and broad shoulder muscles. When she lifted steel her cracked teeth ground together in exertion and lines of sinew pressed outward like Samson destroying the temple. Every tool stroke had more care than a shepherd tending his lambs. Clear eyes infallibly read and interpreted her measuring tape.<br><br>
