added clarifier about writing

--- a/writing.html
+++ b/writing.html
@@ -85,7 +85,8 @@
 			<li><a href="https://jmsudar.com/docs/JosephSudarResume.pdf">Working</a></li>
 		</ul>
 	</div>
-		<p>Making up stories is one of the earliest things I remember doing. Despite this, I didn't put together that I could put my ideas on paper until age fourteen. Since then, I've tried and mostly succeeded at writing every day. To date I have been published once, in the 2011 Scribendi literary journal. If you are curious about my writing or would like to read more, please feel free to reach out to <u>jmsudar@gmail.com</u>.</p>
+		<p>Making up stories is one of the earliest things I remember doing. Despite this, I didn't put together that I could put my ideas on paper until age fourteen. Since then, I've tried and mostly succeeded at writing every day. To date I have been published once, in the 2011 Scribendi literary journal.</p>
+		<p>Please click any of the titles below to read my work. If you are curious about my writing or would like to read more, please feel free to reach out to <u>jmsudar@gmail.com</u>.</p>
 		<a href="/writing/restless.html"><h1>Restless</h1></a>
 		<p>Restless is the second novel-length piece of writing I've finished to date, and the one I feel best represents me as a writer. My hope is that Restless can one day be published. Please enjoy here the content from the first 30 pages!</p>
 		<p>Hector "Heck" Reeves is a medium. Specifically, he hunts revenants, malicious ghosts, under the authority of the Riverport Academy of Post Death Phenomena. Or he was, until the trauma of his own possession as a teenager resurfaced and threatened to end his career. When his most-promising student goes missing, he has no choice but to push past his trauma and return to work. What waits for him in the dark ruins in which she disappeared is not simply another revenant, however, but something older, more dangerous, and more cruel than his field believes possible.</p>
