--- a/writing.html
+++ b/writing.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Web Design - Joe Sudar</title>
+        <title>Writing - Joe Sudar</title>
         <meta name="description" content="">
         <meta name=viewport content="width=device-width, minimum-scale=1.0, maximum-scale=1.0"/>
 
